// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given asset 1`] = `
Object {
  "data": Array [
    8,
    2,
    16,
    0,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransaction should return signed transaction for given asset schema 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      43,
      60,
      29,
      156,
      215,
      22,
      91,
      93,
      243,
      135,
      239,
      137,
      138,
      55,
      21,
      66,
      184,
      190,
      254,
      5,
      7,
      253,
      170,
      178,
      51,
      191,
      76,
      64,
      74,
      221,
      130,
      244,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        92,
        157,
        152,
        118,
        179,
        166,
        144,
        13,
        46,
        173,
        191,
        70,
        25,
        215,
        252,
        173,
        217,
        55,
        137,
        69,
        193,
        41,
        139,
        74,
        22,
        15,
        134,
        61,
        246,
        36,
        123,
        191,
        97,
        192,
        11,
        145,
        221,
        214,
        122,
        216,
        134,
        165,
        17,
        237,
        114,
        184,
        97,
        186,
        19,
        70,
        237,
        162,
        135,
        104,
        68,
        39,
        71,
        34,
        192,
        16,
        128,
        138,
        47,
        5,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign signTransactionWithPrivateKey should return signed transaction for given asset schema 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      92,
      157,
      45,
      219,
      231,
      117,
      166,
      36,
      174,
      143,
      229,
      2,
      82,
      252,
      218,
      51,
      135,
      153,
      90,
      252,
      248,
      110,
      14,
      149,
      210,
      141,
      110,
      19,
      4,
      202,
      152,
      170,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        205,
        195,
        227,
        198,
        73,
        136,
        175,
        15,
        44,
        126,
        67,
        37,
        71,
        237,
        11,
        99,
        4,
        39,
        188,
        229,
        156,
        181,
        13,
        162,
        179,
        119,
        150,
        24,
        221,
        104,
        192,
        45,
        7,
        156,
        62,
        173,
        91,
        222,
        19,
        139,
        244,
        231,
        215,
        206,
        125,
        35,
        107,
        242,
        104,
        111,
        70,
        180,
        167,
        148,
        174,
        240,
        72,
        153,
        111,
        221,
        202,
        221,
        57,
        14,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `[Function]`;
